--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @use '@angular/material' as mat;
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "leaflet/dist/leaflet.css";
+
 
 :root {
   --font-principal: 14px;
