--- a/src/app/shared/component/maps-google/maps-google.component.scss
+++ b/src/app/shared/component/maps-google/maps-google.component.scss
@@ -127,9 +127,13 @@ form {
 }
 
 google-map {
-  display: block;
-  height: 400px;
-  width: 100%;
+    display: block;
+    height: 400px !important;
+    width: 100% !important;
+    border: 1px solid red;
+     background-color: rgba(255, 0, 0, 0.1);
+    /* para visualizar a borda do container */
+
 }
 
 
