--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
@@ -8,6 +8,7 @@
         flex-direction: column;
         height: calc(100vh - 30px);
         width: 100%;
+        overflow-x: hidden;
         position: relative;
         scrollbar-width: thin;
         scrollbar-color: rgba(21, 9, 185, 0.133);
