--- a/src/app/shared/component/foother/footer.component.html
+++ b/src/app/shared/component/foother/footer.component.html
@@ -1,11 +1,11 @@
 <footer class="ng-footer" [ngClass]="color">
     <div class="ng-main">
         @if (footerActive){
-            <section class="ng-header-footer">
+            <section class="ng-header-footer ng-header-footer02">
                 <div class="ng-logo"></div>
                 <button mat-raised-button class="btn-footer">Nossos Planos</button>
             </section>
-            <section>
+            <section class="ng-container-footer">
                 <div class="ng-column-footer">
                     <h3>Atendimento ao Cliente</h3>
                     <a routerLink="/home">Central de Ajuda</a>
