--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
@@ -1,23 +1,26 @@
-.main{
+.main {
     background-color: #0a1630;
     width: 100%;
+    overflow-x: hidden;
 
     .ng-planos {
         display: flex;
         align-items: center;
         flex-direction: column;
 
-        .ng-section02{
+        .ng-section02 {
             width: 80%;
             box-sizing: border-box;
             gap: 25px 0;
-            .ng-title{
+
+            .ng-title {
                 color: rgba(98, 222, 231, 0.836);
                 font-size: 20px;
                 font-weight: bold;
             }
-            .ng-sutitulo{
-                color: #485374;                
+
+            .ng-sutitulo {
+                color: #485374;
                 font-size: 16px;
                 padding-top: 5px;
                 margin: 5px;
@@ -27,10 +30,56 @@
             .ng-container-planos {
                 display: flex;
                 justify-content: center;
+                flex-direction: column;
                 font-size: 14px;
-                padding:30px 20px;
+                padding: 30px 20px;
 
-            
+
+            }
+        }
+    }
+}
+
+
+
+// -----------------------------------------------------------------------------------------------------------//
+@media screen and (min-width:769px) {
+    .main {
+        background-color: #0a1630;
+        width: 100%;
+
+        .ng-planos {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+
+            .ng-section02 {
+                width: 80%;
+                box-sizing: border-box;
+                gap: 25px 0;
+
+                .ng-title {
+                    color: rgba(98, 222, 231, 0.836);
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+
+                .ng-sutitulo {
+                    color: #485374;
+                    font-size: 16px;
+                    padding-top: 5px;
+                    margin: 5px;
+                }
+
+
+                .ng-container-planos {
+                    display: flex;
+                    justify-content: center;
+                    font-size: 14px;
+                    padding: 30px 20px;
+
+
+                }
             }
         }
     }
