--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
@@ -9,6 +9,7 @@
         width: 100%;
         overflow-x: hidden;
         position: relative;
+        scrollbar-width: thin;
         scrollbar-color: rgba(21, 9, 185, 0.133);
 
         .ng-categoria {
