--- a/src/app/shared/component/foother/footer.component.scss
+++ b/src/app/shared/component/foother/footer.component.scss
@@ -3,49 +3,47 @@
     padding: 35px;
 }
 
-.ng-footer{
-    width: 100vw;
+.ng-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     background-color: #0a1630;
+    padding-bottom: 60px;
+
     .ng-main {
         display: flex;
         flex-direction: column;
-        padding: 40px 170px;
+        width: 90%;
+        padding: 40px 30px;
         gap: 20px;
-            
 
-        a{
+
+        a {
             color: #FFFF;
             text-decoration: none;
             cursor: pointer;
         }
-        .ng-footer-small{
+
+        .ng-footer-small {
             font-size: 12px;
             color: var(--color-header);
             text-align: center;
         }
+
+
+
+        .ng-container-footer,
         .ng-header-footer {
             display: flex;
-            justify-content: space-between;
-
-            .ng-logo {
-                width: 150px;
-                height: 55px;
-                padding: 5px;
-                background-image: url('/logo.png');
-                background-size: cover;
-                background-repeat: no-repeat;
-                object-fit: cover;
-                cursor: pointer;
-            }
-        }
-
-        section {
-            display: flex;
-            justify-content: space-between;
-            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 70px 0;
 
             .btn-footer {
-                height: 40px;
+                width: 100%;
+                height: 35px;
                 background-color: #FF9D24;
                 border: none;
                 padding: 0 15px;
@@ -56,15 +54,16 @@
 
             .ng-column-footer {
                 display: flex;
-                justify-content: flex-start;
+                justify-content: center;
                 flex-direction: column;
+                width: 100%;
                 color: #bbb;
                 gap: 15px;
                 font-size: 14px;
 
                 .ng-icon-social-media {
                     display: flex;
-                    justify-content: end;
+                    justify-content: space-around;
                     flex-direction: row;
                     width: 100%;
                     gap: 5px;
@@ -79,46 +78,284 @@
 
                 }
 
-                .ng-signup{
+                .ng-signup {
                     display: flex;
-                    align-items: flex-end;
-                    justify-content: end;
+                    align-items: center;
+                    justify-content: center;
                     cursor: pointer;
-                    .mat-icon{
+                    width: 100%;
+
+                    .mat-icon {
                         color: #fff;
                     }
-                    button{
-                        margin-left: 10px;
-                        padding: 5px 20px;
+
+                    button {
                         border: 0;
                         border-radius: 5px;
                         cursor: pointer;
-        
+
                     }
-                    button:active{
+
+                    button:active {
                         transform: scale(0.92);
                     }
-                    .btn1{
-                        background-color:#FF9933 ;
+
+                    .btn1 {
+                        background-color: #FF9933;
                     }
-                    .btn2{
-                        background-color:#f7f5f4 ;
+
+                    .btn2 {
+                        width: 100%;
+                        height: 35px;
+                        background-color: #f7f5f4;
                     }
-                    .btn1:hover{
+
+                    .btn1:hover {
                         background-color: #928c45;
                         color: #FFF;
                     }
-                    .btn2:hover{
+
+                    .btn2:hover {
                         background-color: #b5f1ff;
                         color: #0f0f0f;
                     }
-                }            
+                }
 
             }
         }
+
+        .ng-header-footer {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+            gap: 0 20px;
+
+            .ng-logo {
+                width: 100%;
+                height: 55px;
+                padding: 5px;
+                background-size: contain;
+                background-image: url('/logo.png');
+                background-repeat: no-repeat;
+                object-fit: cover;
+                cursor: pointer;
+            }
+        }
     }
-        
+
+
+
+    .ng-column-footer3 {
+        justify-content: center;
+        align-items: center;
+
+        .ng-icon-social-media {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: row;
+            width: 100%;
+            gap: 5px;
+
+            .ng-img-socialMedia {
+                display: flex;
+                justify-content: center;
+                width: 30px;
+                height: 30px;
+                background-size: cover;
+                background-repeat: no-repeat;
+                cursor: pointer;
+            }
+
+        }
+    }
 }
-.ng-column-footer3 {
-    align-items: end;
+
+
+
+// -----------------------------------------------------------------------------------------------------------//
+@media screen and (min-width:769px) {
+    .ng-footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        background-color: #0a1630;
+        padding-bottom: 20px;
+
+        .ng-main {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+            padding: 40px 30px;
+            gap: 40px;
+
+
+            a {
+                color: #FFFF;
+                text-decoration: none;
+                cursor: pointer;
+            }
+
+            .ng-footer-small {
+                font-size: 12px;
+                color: var(--color-header);
+                text-align: center;
+            }
+
+            .ng-header-footer {
+                display: flex;
+                justify-content: space-between;
+                flex-direction: row;
+
+                .ng-logo {
+                    width: 150px;
+                    height: 55px;
+                    padding: 5px;
+                    background-image: url('/logo.png');
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    object-fit: cover;
+                    cursor: pointer;
+                }
+            }
+
+            .ng-container-footer,
+            .ng-header-footer {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-start;
+                flex-direction: row;
+                gap: 70px 0;
+
+                .btn-footer {
+                    width: 20%;
+                    height: 40px;
+                    background-color: #FF9D24;
+                    border: none;
+                    padding: 0 15px;
+                    border-radius: 8px;
+                    font-weight: 600;
+                    cursor: pointer;
+                }
+
+                .ng-column-footer {
+                    display: flex;
+                    justify-content: flex-start;
+                    flex-direction: column;
+                    color: #bbb;
+                    gap: 15px;
+                    font-size: 14px;
+
+                    .ng-icon-social-media {
+                        display: flex;
+                        justify-content: end;
+                        flex-direction: row;
+                        width: 100%;
+                        gap: 5px;
+
+                        .ng-img-socialMedia {
+                            width: 30px;
+                            height: 30px;
+                            background-size: cover;
+                            background-repeat: no-repeat;
+                            cursor: pointer;
+                        }
+
+                    }
+
+                    .ng-signup {
+                        display: flex;
+                        align-items: flex-end;
+                        justify-content: end;
+                        cursor: pointer;
+
+                        .mat-icon {
+                            color: #fff;
+                        }
+
+                        button {
+                            margin-left: 10px;
+                            padding: 5px 20px;
+                            border: 0;
+                            border-radius: 5px;
+                            cursor: pointer;
+
+                        }
+
+                        button:active {
+                            transform: scale(0.92);
+                        }
+
+                        .btn1 {
+                            background-color: #FF9933;
+                        }
+
+                        .btn2 {
+                            width: 80%;
+                            background-color: #f7f5f4;
+                        }
+
+                        .btn1:hover {
+                            background-color: #928c45;
+                            color: #FFF;
+                        }
+
+                        .btn2:hover {
+                            background-color: #b5f1ff;
+                            color: #0f0f0f;
+                        }
+                    }
+
+                }
+            }
+        }
+
+        .ng-header-footer02 {
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: column;
+            gap: 0 20px;
+
+            .ng-logo {
+                width: 100%;
+                height: 55px;
+                padding: 5px;
+                background-size: contain;
+                background-image: url('/logo.png');
+                background-repeat: no-repeat;
+                object-fit: cover;
+                cursor: pointer;
+            }
+        }
+    }
+
+
+
+    .ng-column-footer3 {
+        width: 10%;
+        justify-content: flex-start;
+        align-items: flex-end;
+
+        .ng-icon-social-media {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            flex-direction: column;
+            width: 100%;
+            gap: 5px;
+
+            .ng-img-socialMedia {
+                display: flex;
+                justify-content: center;
+                width: 30px;
+                height: 30px;
+                background-size: cover;
+                background-repeat: no-repeat;
+                cursor: pointer;
+            }
+
+        }
+    }
+
 }
