--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,15 @@ app-root {
   margin: 0;
 }
 
+body.modal-open {
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+
 
 input,
 textarea,
