--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
@@ -2,6 +2,7 @@
     background-color: #0a1630;
     width: 100%;
     overflow-x: hidden;
+    
 
     .ng-planos {
         display: flex;
@@ -30,9 +31,11 @@
             .ng-container-planos {
                 display: flex;
                 justify-content: center;
+                align-items: center;
                 flex-direction: column;
                 font-size: 14px;
-                padding: 30px 20px;
+                padding: 50px;
+                gap: 30px 0;
 
 
             }
@@ -47,6 +50,7 @@
     .main {
         background-color: #0a1630;
         width: 100%;
+        height: 100%;
 
         .ng-planos {
             display: flex;
@@ -55,8 +59,8 @@
 
             .ng-section02 {
                 width: 80%;
-                box-sizing: border-box;
-                gap: 25px 0;
+                gap: 25px;
+                text-align: center;
 
                 .ng-title {
                     color: rgba(98, 222, 231, 0.836);
@@ -75,9 +79,12 @@
                 .ng-container-planos {
                     display: flex;
                     justify-content: center;
+                    height: 100dvh;
                     font-size: 14px;
                     padding: 30px 20px;
-
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    gap: 30px;
 
                 }
             }
