--- a/src/app/features/pages/admin/homeAdmin/menuDropDown/menudrop.component.scss
+++ b/src/app/features/pages/admin/homeAdmin/menuDropDown/menudrop.component.scss
@@ -1,14 +1,15 @@
 .area-menu {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 100px);
     box-shadow: 0, 8px, 0, 2.3;
     border-right: 1px solid #eee;
     overflow-y: auto;
-    scrollbar-color: #627c99 #f2f2f2;
     scrollbar-width: thin;
+    scrollbar-color: #ccc #f7f7f7;
     position: fixed;
+    flex-shrink: 0;
     z-index: 1000;
-    top: 75px;
+    top: 76px;
     background-color: #FFF;
 
 
@@ -154,11 +155,11 @@
         box-shadow: 0, 8px, 0, 2.3;
         border-right: 1px solid #eee;
         overflow-y: auto;
-        scrollbar-color: #505861 #f2f2f2;
         scrollbar-width: thin;
-        border-top: 10x solid #999;
-        border-top: 1px solid #999;
+        scrollbar-color: #ccc #f7f7f7;
         position: static;
+        flex-shrink: 0;
+        z-index: 1000;
         z-index: none;
         top: none;
 
