Criando modal buscar endereço no mapa v02

--- a/src/app/features/pages/v1/carrinho/endereco-entrega/endereco-entrega.component.html
+++ b/src/app/features/pages/v1/carrinho/endereco-entrega/endereco-entrega.component.html
@@ -10,6 +10,6 @@
 
 </div>
 @if (ativaMapsGoogle) {
-  <app-maps-google (desbiledCarEmit)="callMapsGoogle()"></app-maps-google>
+  <app-maps-google (enderecoConfirmado)="receberEndereco($event)" (desbiledCarEmit)="callMapsGoogle()"></app-maps-google>
 }
 
