--- a/src/app/shared/component/maps-google/maps-google.component.scss
+++ b/src/app/shared/component/maps-google/maps-google.component.scss
@@ -6,17 +6,17 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    padding: 0;
+    overflow: hidden;
 
     .container-int {
         display: flex;
         flex-direction: column;
-        align-items: center;
         width: 100%;
-        height: 60vh;
+        height: 100vh;
         background-color: #fff;
-        padding: 0 20px;
-        gap: 20px;
+        padding: 0;
+        gap: 20px 0;
 
         .container-header {
             display: flex;
@@ -25,71 +25,89 @@
             align-items: center;
             background-color: #fff;
             position: fixed;
+            z-index: 1002;
             padding: 5px 2px;
             border-bottom: 2px solid #e6e6e6;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+
+
+            .btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: transparent;
+                border: none;
+                padding: 8px;
+            }
 
             div {
                 width: 100%;
             }
 
+            .header-searh {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                background-color: #fff;
+
+                .ng-fieldset {
+                    width: 80%;
+                    border-radius: 5px;
+                    border-color: #bbb;
+                    background-color: #fff;
+
+                    legend {
+                        font-size: 13px;
+                        font-weight: 500;
+                        color: #555;
+                        padding: 0 4px;
+                    }
+
+                    input {
+                        background-color: transparent;
+                        outline: none;
+                        border: none;
+                        width: 100%;
+                        height: 30px;
+                        font-size: 16px;
+                        color: #333;
+                    }
+
+                    .ng-input::placeholder {
+                        color: #999;
+                        font-size: 14px;
+                        padding-left: 10px;
+                    }
+
+
+
+                }
+            }
+
             h1 {
                 text-align: center;
                 font-weight: 700;
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                color: #222;
+                color: #444;
             }
         }
 
         .container-infor-produto {
             display: flex;
             flex-direction: column;
+            align-items: center;
             width: 100%;
             height: auto;
             gap: 10px;
-            margin-top: 70px;
-            padding: 20px;
+            margin-top: 20px;
+            padding: 20px 0;
 
-            .ng-fieldset {
-                width: 100%;
-                padding: 2px;
-                border-radius: 5px;
-                margin-top: 15px;
-                border-color: #bbb;
-
-                legend {
-                    font-size: 12px;
-                    font-weight: 500;
-                    color: #555;
-                    padding: 0 4px;
-                }
-
-                .ng-input {
-                    background-color: transparent;
-                    outline: none;
-                    border: 0;
-                    width: 100%;
-                    height: 30px;
-                    font-size: 16px;
-                    color: #333;
-                }
-
-                .ng-input::placeholder {
-                    color: #999;
-                    font-size: 14px;
-                    padding-left: 10px;
-                }
-
-
-
-            }
 
             .map-wrapper {
-                position: relative;
+                position: fixed;
                 width: 100%;
-                height: 400px;
-                overflow: visible;
+                height: 95%;
 
                 google-map {
                     position: absolute;
@@ -173,7 +191,6 @@
                 font-weight: 500;
                 background: var(--background-color-container);
                 color: #ddd;
-                margin-bottom: 60px;
             }
 
             .ng-btn:hover {
@@ -189,10 +206,46 @@
                 color: #888;
             }
 
-        }
-    }
 
+            .footer-confirmar {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                background-color: #fff; // fundo branco
+                padding: 10px 20px;
+                box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1); // sombra suave em cima
+                display: flex;
+                justify-content: center;
+                z-index: 1002;
+
+                button.btn-confirmar {
+                    width: 100%;
+                    height: 50px;
+                    background-color: #6d4386;
+                    color: white;
+                    font-weight: 700;
+                    font-size: 16px;
+                    border: none;
+                    border-radius: 6px;
+                    cursor: pointer;
+                    transition: background-color 0.3s ease;
+
+                    &:hover {
+                        background-color: #5a3570;
+                    }
+
+                    &:active {
+                        transform: scale(0.98);
+                    }
+                }
+            }
+        }
+
+    }
 }
+
+
 
 
 .btn-voltar {
@@ -241,32 +294,61 @@
             width: 680px;
             border-radius: 10px;
             height: auto;
-            padding: 0 30px;
-
+            padding: 0 10px;
+            gap: 0;
 
             .container-header {
                 position: relative;
                 border-bottom: 2px solid #e6e6e6;
                 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+
             }
+
 
             .container-infor-produto {
                 display: flex;
                 flex-direction: column;
-                gap: 40px;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: auto;
+                gap: 0;
                 margin-top: 0;
+                padding: 0;
 
-                section {
-                    display: flex;
-                    flex-direction: column;
-                    flex: 1;
+
+                .map-wrapper {
+                    position: relative;
+                    width: 100%;
+                    height: 80dvh;
+
+                    google-map {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        width: 100%;
+                        z-index: 1;
+                        margin-bottom: 20px;
+                    }
+
                 }
 
+                .footer-confirmar {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    background-color: #fff; // fundo branco
+                    padding: 20px;
+                    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1); // sombra suave em cima
+                    border: none;
+                    display: flex;
+                    justify-content: center;
+                    z-index: 1002;
+                }
             }
 
-            .ng-btn {
-                margin-bottom: 20px;
-            }
         }
     }
 }
