Criando modal buscar endereço no mapa v02

--- a/src/app/shared/component/maps-google/maps-google.component.scss
+++ b/src/app/shared/component/maps-google/maps-google.component.scss
@@ -55,9 +55,10 @@
                     border-radius: 5px;
                     border-color: #bbb;
                     background-color: #fff;
+                    border: 1px solid #aaa;
 
                     legend {
-                        font-size: 13px;
+                        font-size: 12px;
                         font-weight: 500;
                         color: #555;
                         padding: 0 4px;
